@@ -3,6 +3,11 @@ _Name=Gnomeradio
 _Comment=A Gnome FM-Tuner
 Exec=gnomeradio
 Icon=radio.png
-Terminal=0
-Type=Application
 Categories=Application;AudioVideo;
+StartupNotify=true
+Terminal=false
+Type=Application
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=gnomeradio
+X-GNOME-Bugzilla-Component=general
+X-GNOME-DocPath=gnomeradio/gnomeradio.xml
